--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ strategy_final.ipynb
 strategy.ipynb
 strategy2.ipynb
 learn1.ipynb
+backtest_report.pdf
+backtest_report_2.synctex.gz
+backtest_report_2.tex
